# aiops-nextgen

./: .gitignore  CLAUDE.md  EXECUTION_INSTRUCTIONS.md  LICENSE  README.md  alembic.ini  devops-instructions.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
debug/: bugfix-sprint-plan.md  issues.md
debug/sprint/: README.md  sprint-01-security-foundation.md  sprint-02-kubernetes-integration.md  sprint-03-prometheus-auth.md  sprint-04-logs-traces.md  sprint-05-gpu-telemetry.md  sprint-06-cnf-monitoring.md  sprint-07-websocket-hardening.md  sprint-08-anomaly-rca.md  sprint-09-reports-mcp.md  sprint-10-api-gateway-polish.md  sprint-10-api-gateway.md
deploy/k8s/: create-shared-configmaps.sh  frontend-deployment.yaml  phase1-full-test.yaml  phase1-infra.yaml
deploy/openshift/: api-gateway.yaml  cluster-registry.yaml  intelligence-engine.yaml  kustomization.yaml  namespace.yaml  observability-collector.yaml  postgresql.yaml  realtime-streaming.yaml  redis.yaml
migrations/: env.py
migrations/versions/: 20241224_0001_initial_schema.py
specs/: 00-overview.md  01-data-models.md  02-cluster-registry.md  03-observability-collector.md  04-intelligence-engine.md  05-realtime-streaming.md  06-api-gateway.md  07-frontend.md  08-integration-matrix.md  09-deployment.md
src/: development-plan.md  docker-compose.yml  pyproject.toml
src/api-gateway/: Dockerfile  requirements.txt
src/api-gateway/app/: __init__.py  main.py
src/api-gateway/app/api/: __init__.py  health.py  proxy.py  websocket_proxy.py
src/api-gateway/app/middleware/: __init__.py  oauth.py  rate_limit.py  tracing.py  validation.py
src/api-gateway/app/services/: __init__.py  rbac.py
src/api-gateway/tests/: __init__.py  conftest.py  test_gateway.py  test_oauth.py  test_rbac.py
src/cluster-registry/: Dockerfile  requirements.txt
src/cluster-registry/app/: __init__.py  main.py
src/cluster-registry/app/api/: __init__.py  clusters.py  fleet.py  health.py
src/cluster-registry/app/repositories/: __init__.py  cluster_repository.py
src/cluster-registry/app/schemas/: __init__.py  cluster.py  credentials.py  fleet.py
src/cluster-registry/app/services/: __init__.py  cluster_service.py  credential_service.py  credential_store.py  credential_validator.py  discovery.py  event_service.py  health_service.py
src/cluster-registry/tests/: __init__.py  conftest.py  test_clusters.py  test_credential_store.py  test_credential_validator.py  test_discovery.py
src/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
src/frontend/src/: App.tsx  routes.tsx
src/frontend/src/components/common/: Card.tsx  ProgressBar.tsx  Spinner.tsx  StatusBadge.tsx
src/frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/frontend/src/hooks/: useWebSocket.ts
src/frontend/src/pages/Alerts/: Alerts.tsx
src/frontend/src/pages/Chat/: Chat.tsx
src/frontend/src/pages/Clusters/: Clusters.tsx
src/frontend/src/pages/Dashboard/: Dashboard.tsx
src/frontend/src/pages/GPU/: GPU.tsx
src/frontend/src/pages/Observability/: Observability.tsx
src/frontend/src/services/: alertService.ts  api.ts  chatService.ts  clusterService.ts  gpuService.ts
src/frontend/src/store/: alertStore.ts  authStore.ts  chatStore.ts  clusterStore.ts  gpuStore.ts  themeStore.ts
src/frontend/src/styles/: globals.css
src/frontend/src/types/: alerts.ts  api.ts  chat.ts  cluster.ts  gpu.ts
src/intelligence-engine/: Dockerfile  requirements.txt
src/intelligence-engine/app/: __init__.py  main.py
src/intelligence-engine/app/api/: __init__.py  anomaly.py  chat.py  health.py  personas.py  reports.py
src/intelligence-engine/app/llm/: __init__.py  providers.py  router.py
src/intelligence-engine/app/services/: __init__.py  anomaly_detection.py  chat.py  chat_persistence.py  personas.py  rca.py  reports.py
src/intelligence-engine/app/tools/: __init__.py  definitions.py  executor.py
src/intelligence-engine/tests/: __init__.py  conftest.py  test_intelligence.py
src/migrations/: env.py
src/migrations/versions/: 20241224_0001_initial_schema.py
src/observability-collector/: Dockerfile  requirements.txt
src/observability-collector/app/: __init__.py  main.py
src/observability-collector/app/api/: __init__.py  alerts.py  cnf.py  gpu.py  health.py  logs.py  metrics.py  traces.py
src/observability-collector/app/clients/: __init__.py  cluster_registry.py  prometheus.py
src/observability-collector/app/collectors/: __init__.py  cnf_collector.py  gpu_collector.py  loki_collector.py  prometheus_collector.py  tempo_collector.py
src/observability-collector/app/services/: __init__.py  alerts_service.py  cnf_service.py  gpu_service.py  logs_service.py  metrics_collector.py  metrics_service.py  query_cache.py  traces_service.py
src/observability-collector/tests/: __init__.py  conftest.py  test_observability.py  test_prometheus_client.py
src/realtime-streaming/: Dockerfile  requirements.txt
src/realtime-streaming/app/: __init__.py  main.py
src/realtime-streaming/app/api/: __init__.py  health.py  streaming.py  websocket.py
src/realtime-streaming/app/middleware/: __init__.py  ws_auth.py
src/realtime-streaming/app/services/: __init__.py  backpressure.py  event_router.py  heartbeat.py  hub.py  subscriptions.py
src/realtime-streaming/tests/: __init__.py  conftest.py  test_streaming.py  test_ws_auth.py
src/scripts/: init-db.sql
src/shared/: README.md  __init__.py  pyproject.toml
src/shared/config/: __init__.py  settings.py
src/shared/database/: __init__.py  base.py  models.py
src/shared/models/: __init__.py  base.py  cluster.py  common.py  events.py  gpu.py  intelligence.py  observability.py  reports.py
src/shared/observability/: __init__.py  logging.py
src/shared/redis_client/: __init__.py  client.py
src/tests/: __init__.py  conftest.py
src/tests/integration/: __init__.py
src/tests/unit/shared/: test_models.py
tests/: conftest.py
tests/unit/: __init__.py
tests/unit/shared/: __init__.py  test_models.py
