# AIOps NextGen - Root Project Configuration
#
# Spec Reference: specs/09-deployment.md - Development setup

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiops-nextgen"
version = "0.1.0"
description = "AI-driven operations platform for OpenShift multi-cluster environments"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["aiops", "kubernetes", "openshift", "observability", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    # Redis
    "redis>=5.0.0",
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Logging & Observability
    "structlog>=23.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    # LLM clients
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    # WebSocket
    "websockets>=12.0",
    # Utilities
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.25.0",
    "testcontainers>=3.7.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    # Linting & Formatting
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "black>=23.11.0",
    # Type stubs
    "types-redis>=4.6.0",
]

[project.urls]
Documentation = "https://github.com/fnar/aiops-nextgen#readme"
Issues = "https://github.com/fnar/aiops-nextgen/issues"
Source = "https://github.com/fnar/aiops-nextgen"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "S101",  # assert statements allowed in tests
    "B008",  # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # Allow asserts and hardcoded passwords in tests

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "testcontainers.*",
    "factory.*",
    "faker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | migrations/versions
)/
'''
